crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m107_magic_dragon.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-107-MagicDragon/Magic Dragon (Unl).nes
rom_sha256=2264cce2693cf5c9e32070aa61e64c5d491465e144dc78611f82f9ec48c99c2d
frames=600
fb_bytes=245760
cycles=17838528
audio_samples=439524
audio_fnv1a64=6fd4794cdcea688c
checkpoint f600 fb_fnv1a64=6d024d3ae6606f74
