crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m112_chik_bik_ji_jin_saam_gwok_ji.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
assertion_line: 74
expression: text
---
rom=mapper-112-NTDEC-Asder/Chik Bik Ji Jin - Saam Gwok Ji (CN-20) (Asder) [!].nes
rom_sha256=c9200470e3232670dab11a42368d73549414ff9d50fe41827094d936cacddcf2
frames=600
fb_bytes=245760
cycles=17838531
audio_samples=439524
audio_fnv1a64=b36c2780e94a135b
checkpoint f600 fb_fnv1a64=6db5ce16ab671467
