crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m115_av_jiu_ji_ma_jiang_2.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-115-KashengSFC03/AV Jiu Ji Ma Jiang 2 (Unl) [!].zip
rom_sha256=8e43ffa13e7ba0ced7ac25ecdb8aa85bf87766c0c6430dd64b126da7899f5928
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=855e0cbba90239e5
checkpoint f600 fb_fnv1a64=e3254353bce382ed
