crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m138_silver_eagle.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-138-Sachen8259B/Silver Eagle (Sachen) [!].zip
rom_sha256=1863b457e4f125fe92a7ee7549df0bb932eac99f35198769be711d41408a7ebc
frames=600
fb_bytes=245760
cycles=19915253
audio_samples=528227
audio_fnv1a64=15fa64b648595892
checkpoint f600 fb_fnv1a64=625e1fdc49429391
